# olex2

./: CMakeLists.txt  Makefile  README.md  SConstruct  libffi.txt  openssl.txt  options.txt
Data/: neutron_scatt.txt  olex2.fnt  symmlib.xld  xmasscoef.py
binding/: syntaxp.cpp
branches/1.2/: CMakeLists.txt  LICENCE.txt  SConstruct  options.txt  todo.rtf
branches/1.2/examples/cchnp/: main.cpp
branches/1.2/glib/: 3dframe.cpp  dframe.h  gdrawobject.cpp  gdrawobject.h  glbackground.cpp  glbase.h  glconsole.cpp  glconsole.h  glcursor.cpp  glcursor.h  gldefs.h  glfont.cpp  glfont.h  glgroup.cpp  glgroup.h  gllib.bpf  gllight.cpp  gllight.h  gllightmodel.h  glmaterial.cpp  glmaterial.h  glmouse.cpp  glmouse.h  gloption.cpp  glprimitive.cpp  glprimitive.h  glrender.cpp  glrender.h  glscene.cpp  glscene.h  gltextbox.h  gltexture.cpp  gltexture.h  gpcollection.h  povdraw.cpp  povdraw.h  styles.cpp  styles.h  wrldraw.cpp  wrldraw.h  (+1 more)
branches/1.2/gxlib/: atomlegend.cpp  atomlegend.h  conrec.h  dbasis.cpp  dbasis.h  dring.cpp  dring.h  dsphere.cpp  dsphere.h  dunitcell.cpp  dunitcell.h  dusero.cpp  dusero.h  gllabel.cpp  gllabels.cpp  gllabels.h  gxapp.cpp  gxapp.h  gxfiles.h  gxmacro.cpp  gxmacro.h  olxstate.cpp  olxstate.h  ortdraw.cpp  ortdraw.h  ortdrawtex.h  oxmfile.h  solid_angles.cpp  solid_angles.h  wglscene.cpp  wglscene.h  wxglscene.cpp  wxglscene.h  xatom.cpp  xatom.h  xbond.cpp  xbond.h  xeval.cpp  xgrid.cpp  xgrid.h  (+7 more)
branches/1.2/gxlib/modes/: fit.h  fixc.h  grow.h  hfix.h  himp.h  lock.h  match.h  name.h  occu.h  split.h
branches/1.2/olex/: app.rc  cmdline.cpp  cmdline.h  ctrls.h  dgenopt.cpp  dgrad.cpp  imagep.cpp  langdict.cpp  langdict.h  main_gui.cpp  mainform.cpp  mainform.h  matprop.cpp  msgbox.h  olex2app_imp.h  primtvs.h  scenep.cpp  scenep.h  tasks.cpp  tasks.h  updateoptions.cpp  updateth.cpp  updateth.h  xglapp.cpp  xglapp.h  xglcanv.cpp  xglcanv.h  xpprocs.cpp
branches/1.2/olex/ctrls/: btnext.cpp  btnext.h  checkboxext.cpp  choiceext.h  colorext.cpp  comboext.cpp  comboext.h  datectrlext.cpp  datectrlext.h  frameext.cpp  frameext.h  itemlist.h  labelext.cpp  labelext.h  listboext.cpp  listboxext.h  menuext.cpp  olxctrlbase.h  spinctrlext.cpp  texteditext.cpp  texteditext.h  trackbarext.cpp  trackbarext.h  treeviewext.cpp
branches/1.2/olex/html/: htmlext.cpp  htmlext.h  htmlmanager.cpp  htmlmanager.h  htmlswitch.cpp  htmlswitch.h  htmltags.cpp  imgcellext.cpp
branches/1.2/olex/nui/: nui.h  skeleton.cpp
branches/1.2/repository/: IsoSurface.cpp  cdsfs.cpp  cdsfs.h  con_in.h  eprocess.cpp  eprocess.h  filesystem.cpp  filesystem.h  fsext.cpp  fsext.h  hkl_py.cpp  httpfs.cpp  httpfs.h  olex2app.h  olxvar.cpp  patchapi.cpp  patchapi.h  ps_writer.h  py_core.cpp  pyext.cpp  pyext.h  shellutil.cpp  shellutil.h  tex_writer.h  updateapi.cpp  wxzipfs.cpp  wxzipfs.h
branches/1.2/scripts/: OlexCDS.py  olex2.spec
branches/1.2/sdl/: actions.h  arrays.h  bapp.cpp  bapp.h  bitarray.cpp  bitarray.h  datafile.cpp  dataitem.cpp  dataitem.h  datastream.h  ebase.cpp  ebase.h  ebtree.h  edict.h  edlist.h  efile.cpp  efile.h  egc.cpp  egraph.h  ellist.h  emath.h  ematrix.h  ememstream.h  encodings.h  equeue.h  eset.h  esort.cpp  esort.h  esphere.h  estack.h  estlist.h  estopwatch.h  estrlist.h  etable.h  eutf8.h  evalue.h  exception.cpp  file_filter.h  filetree.cpp  filetree.h  (+42 more)
branches/1.2/sdl/exparse/: builtins.h  context.h  evaluable.h  expbuilder.cpp  expsyn.h  exptree.cpp  exptree.h  expvalue.h  funcwrap.cpp  funcwrap.h
branches/1.2/sdl/math/: align.h  composite.h  evaln.cpp  libmath.cpp  plane.h
branches/1.2/sdl/smart/: olx_cstring.h  olx_istring.h  olx_strcvt.h  olx_wstring.cpp  olx_wstring.h  ostring.cpp
branches/1.2/sdl/tests/: alg_test.h  binding_test.h  encoding_test.h  exparse_test.h  file_test.h  matrix_test.h  ptr_test.h  roman_test.h  spline_test.h  string_test.h
branches/1.2/tests/tests/: tests.cpp  tests.vcxproj  tests.vcxproj.filters
branches/1.2/unirun/: main.cpp
branches/1.2/xlib/: absorpc.h  afixgroup.cpp  afixgroup.h  analysis.cpp  analysis.h  asymmunit.cpp  asymmunit.h  atomref.h  atomregistry.cpp  atomregistry.h  atomsort.h  auto.cpp  auto.h  beevers-lipson.h  calc_ext.cpp  catom.cpp  catom.h  catomlist.cpp  catomlist.h  chemdata.cpp  chemdata.h  chnexp.cpp  cif.cpp  cif.h  cifdata.h  cifdp.cpp  cifdp.h  congen.cpp  connext.h  conninfo.cpp  conninfo.h  constraints_ext.cpp  constraints_ext.h  crs.cpp  ellipsoid.cpp  envilist.h  evaln.cpp  experimental.cpp  experimental.h  exyzgroup.cpp  (+71 more)
branches/1.2/xlib/absorpc/: absorpc_Al.cpp  absorpc_Be.cpp  absorpc_Ca.cpp  absorpc_Cr.cpp  absorpc_Fr.cpp  absorpc_Ge.cpp  absorpc_Hf.cpp  absorpc_Kr.cpp  absorpc_La.cpp  absorpc_Nd.cpp  absorpc_Ni.cpp  absorpc_Sb.cpp  absorpc_Sn.cpp  absorpc_Sr.cpp  absorpc_Xe.cpp  absorpc_Y.cpp  absorpc_Yb.cpp
branches/1.2/xlib/henke/: henke_Ac.cpp  henke_Al.cpp  henke_Au.cpp  henke_B.cpp  henke_Ba.cpp  henke_C.cpp  henke_Ca.cpp  henke_Ce.cpp  henke_Co.cpp  henke_Cs.cpp  henke_Eu.cpp  henke_F.cpp  henke_Fr.cpp  henke_Ga.cpp  henke_He.cpp  henke_K.cpp  henke_La.cpp  henke_Na.cpp  henke_Ne.cpp  henke_Pr.cpp  henke_Rn.cpp  henke_Sm.cpp  henke_Ti.cpp  henke_Tm.cpp  henke_Xe.cpp  henke_Zr.cpp
branches/1.2/xlib/macro/: brushhkl.cpp  graphsr.cpp  imp_auto.cpp  sg.cpp  testsymm.cpp  wilson.cpp
branches/1.2/xlib/tests/: cell_reduction_test.h  formula_test.h  smat_test.h  symmparser_test.h  vcov_test.h
glib/: 3dframe.cpp  3dframe.h  base_2d.h  dframe.cpp  dframe.h  gdrawobject.cpp  gdrawobject.h  glalg.h  glbackground.cpp  glbackground.h  glbase.h  glbitmap.cpp  glbitmap.h  glclipplane.cpp  glclipplane.h  glconsole.cpp  glconsole.h  glcursor.cpp  glcursor.h  gldefs.h  glfont.cpp  glfont.h  glgroup.cpp  glgroup.h  gllight.cpp  gllight.h  gllightmodel.cpp  gllightmodel.h  glmaterial.cpp  glmaterial.h  glmouse.cpp  glmouse.h  glmousehandler.cpp  glmousehandler.h  glmouselistener.cpp  glmouselistener.h  gloption.cpp  gloption.h  glpixels.cpp  glprimitive.cpp  (+21 more)
gxlib/: atomlegend.cpp  atomlegend.h  conrec.h  dbasis.cpp  dbasis.h  dring.cpp  dring.h  dsphere.cpp  dsphere.h  (+62 more)
(+4806 files in other folders)
